# llm-rag-knowledge

./: README.md  pyproject.toml
course4_langchain/course16_callback/: 5.设计实现callback.md  6.Asynchronous Callbacks.md
langchain_knowledge/callback_kl/: 1.callback基础知识.md  3.langchain callback 初探.md  4.Constructor Callbacks.md  7.如何实现自定义回调.md
llm_rag_knowledge/course4_langchain/course17_custom/: 1.如何实现自定义的chat model.md
llm_rag_knowledge/course4_langchain/course17_custom/codes/: 实现自定义的大模型.py
llm_rag_knowledge/course4_langchain/use_cases/chatbots/: 2.MessagesState vs MemorySaver：它们的关系.md
llm_rag_knowledge/course4_langchain/use_cases/qa_over_sql_csv/: 1.根据SQL进行查询.md  2.查询校验.md
llm_rag_knowledge/course4_langchain/use_cases/qa_with_graph/: 1.构建图查询.md
llm_rag_knowledge/course4_langchain/use_cases/qa_with_rag/: 1. 使用对话历史.md  2.流式输出.md
llm_rag_knowledge/course4_langchain/use_cases/query_analysis/: 2,区分闲聊还是query.md  5.根据查询构造向量数据库的filters.md  6.当过滤项面临高基数选择.md
llm_rag_knowledge/course4_langchain/use_cases/summary/: 1.使用map reduce进行总结.md  2.串行迭代summary.md
llm_rag_knowledge/course_langchain/LCEL/: 1.开篇介绍.md  10.对话历史管理.md  11.子链路由.md  12.创建动态链.md  13.怎么检查chain的元素.md  14.备用方案.md  15.密钥等铭感信息使用.md  2.LCEL 核心技巧.md  3.构造第一个chain.md  4.流式输出stream(event).md  5.并行计算.md  6.bind.md  7.自定义函数.md  8.参数向后传递.md  9.参数动态配置.md
llm_rag_knowledge/course_langchain/course16_callback/: 2.和异步及多线程的区别.md
llm_rag_knowledge/course_langchain/course17_custom/codes/: 实现自定义的大模型.py
llm_rag_knowledge/course_langchain/use_cases/chatbots/: 1.管理对话历史.md  3.chat中加入rag.md  4.trim messages.md
(+14 files in other folders)
